[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/images/Background.png" type="Texture" id=1]
[ext_resource path="res://res/fonts/LargeFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://res/fonts/SmallFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://res/theme/Menu.tres" type="Theme" id=4]
[ext_resource path="res://src/MainMenu.gd" type="Script" id=5]

[sub_resource type="Animation" id=2]
length = 0.5

[sub_resource type="Animation" id=1]
resource_name = "ShowSetting"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Setting:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Setting:anchor_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Main:anchor_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
length = 0.001

[sub_resource type="Animation" id=3]
resource_name = "Start"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("UI:anchor_right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="UI" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
custom_constants/separation = 20

[node name="Title" type="Label" parent="UI"]
margin_right = 480.0
margin_bottom = 270.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "PlaneWar
"
align = 1

[node name="Menu" type="Control" parent="UI"]
margin_top = 290.0
margin_right = 480.0
margin_bottom = 561.0
size_flags_vertical = 3

[node name="Main" type="VBoxContainer" parent="UI/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
theme = ExtResource( 4 )

[node name="start" type="Button" parent="UI/Menu/Main"]
margin_left = 40.0
margin_right = 440.0
margin_bottom = 58.0
rect_min_size = Vector2( 400, 0 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
text = "开始"

[node name="setting" type="Button" parent="UI/Menu/Main"]
margin_left = 40.0
margin_top = 88.0
margin_right = 440.0
margin_bottom = 146.0
rect_min_size = Vector2( 400, 0 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
text = "设置"

[node name="HowToPlay" type="Button" parent="UI/Menu/Main"]
margin_left = 40.0
margin_top = 176.0
margin_right = 440.0
margin_bottom = 234.0
rect_min_size = Vector2( 400, 0 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
text = "玩法"

[node name="Quit" type="Button" parent="UI/Menu/Main"]
margin_left = 40.0
margin_top = 264.0
margin_right = 440.0
margin_bottom = 322.0
rect_min_size = Vector2( 400, 0 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
text = "退出"

[node name="Setting" type="VBoxContainer" parent="UI/Menu"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )

[node name="BGM" type="Button" parent="UI/Menu/Setting"]
margin_right = 400.0
margin_bottom = 58.0
rect_min_size = Vector2( 400, 0 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
text = "音乐：开"

[node name="SFX" type="Button" parent="UI/Menu/Setting"]
margin_top = 88.0
margin_right = 400.0
margin_bottom = 146.0
rect_min_size = Vector2( 400, 0 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
text = "音效：开"

[node name="Back" type="Button" parent="UI/Menu/Setting"]
margin_top = 176.0
margin_right = 400.0
margin_bottom = 234.0
rect_min_size = Vector2( 400, 0 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
text = "返回"

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/Menu"]
anims/RESET = SubResource( 2 )
anims/ShowSetting = SubResource( 1 )

[node name="Author" type="Label" parent="UI"]
margin_top = 581.0
margin_right = 480.0
margin_bottom = 852.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "made by CHI "
align = 2
valign = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Start"
anims/RESET = SubResource( 4 )
anims/Start = SubResource( 3 )

[connection signal="pressed" from="UI/Menu/Main/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="UI/Menu/Main/setting" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="UI/Menu/Main/HowToPlay" to="." method="_on_HowToPlay_pressed"]
[connection signal="pressed" from="UI/Menu/Main/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="UI/Menu/Setting/BGM" to="." method="_on_BGM_pressed"]
[connection signal="pressed" from="UI/Menu/Setting/SFX" to="." method="_on_SFX_pressed"]
[connection signal="pressed" from="UI/Menu/Setting/Back" to="." method="_on_Back_pressed"]
